<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_gravity="center"
    android:orientation="vertical"
    >

    <include layout="@layout/layout_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:id="@+id/ll_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_toolbar"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/employee_id"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_emp_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"

                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <EditText
                    android:id="@+id/et_emp_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_employeeid"
                    android:paddingVertical="15dp"
                    android:paddingStart="20dp"
                    android:inputType="number"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    android:backgroundTint="@color/white"/>


            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/employee_name"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:labelFor="@+id/et_emp_name"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_emp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <EditText
                    android:id="@+id/et_emp_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_employeename"
                    android:paddingVertical="15dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:inputType="textPersonName"
                    android:backgroundTint="@color/white"/>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:orientation="horizontal"
                    android:text="@string/gender">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="108dp"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="129dp"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:labelFor="@+id/et_email_id"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_emailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <EditText
                    android:id="@+id/et_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_emailid"
                    android:paddingVertical="15dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    android:backgroundTint="@color/white"/>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:labelFor="@+id/et_Phon_num"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_PhNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <EditText
                    android:id="@+id/et_phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_number"
                    android:paddingVertical="15dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:inputType="number"
                    android:backgroundTint="@color/white"/>


            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:labelFor="@id/et_Password"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <EditText
                    android:id="@+id/et_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:paddingVertical="15dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:endIconMode="password_toggle"
                    android:backgroundTint="@color/white"/>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/department"
                android:layout_marginStart="18dp"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_emp_dep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="5dp">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/emp_dep_spinner"
                    android:visibility="visible"
                    android:prompt="@string/select_department"
                    android:paddingVertical="15dp"
                    android:paddingStart="18dp"
                    android:paddingEnd="18dp"
                    android:popupBackground="@color/white"
                    >
                </Spinner>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/designation"
                android:layout_marginStart="18dp"
                android:textColor="@color/black"
                android:textSize="15sp"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_emp_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="5dp">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/emp_des_spinner"
                    android:visibility="visible"
                    android:prompt="@string/select_department"
                    android:paddingVertical="15dp"
                    android:paddingStart="18dp"
                    android:paddingEnd="18dp"
                    android:popupBackground="@color/white"
                    >
                </Spinner>

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salary"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_Salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <EditText
                    android:id="@+id/et_Salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_salary"
                    android:paddingVertical="15dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:inputType="number"
                    android:backgroundTint="@color/white"/>


            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="#60B5FF"
                style="@style/Widget.MaterialComponents.Button" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>