<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_gravity="center"
    android:orientation="vertical"
    >


    <include layout="@layout/layout_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_login"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/iv_Logo"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:src="@drawable/logo" />


<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical"
    android:backgroundTint="#60B5FF">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_userName"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/username"

        android:textColor="#000000"
        android:backgroundTint="#60B5FF"
        android:textSize="20sp"
        android:textStyle="bold" />

</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:backgroundTint="#60B5FF"
        app:endIconMode="password_toggle">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType= "textPassword"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="#60B5FF"
            app:passwordToggleTint="#000000"
            app:passwordToggleEnabled="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="#60B5FF"
        style="@style/Widget.MaterialComponents.Button" />


</LinearLayout>